Resolved the layout issues

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -121,6 +121,10 @@ md-select-menu.md-advisen-theme md-content
   border-radius: 3px;
 }
 
+.ai-dark-spin {
+  border-color: rgba(255, 255, 255, 0.5) rgba(255, 255, 255, 0.5) #ffffff #ffffff;
+}
+
 
 @media screen
 and (min-device-width: 1200px) {
