--- a/src/app/sidenav/navigation/navigation.scss
+++ b/src/app/sidenav/navigation/navigation.scss
@@ -327,6 +327,11 @@ $navigationFoldedWidth: 64px;
                                         opacity: 0;
                                         visibility: hidden;
                                     }
+
+                                    > .ms-nav-hide{
+                                        opacity: 0;
+                                        visibility: hidden;
+                                    }
                                 }
                             }
                         }
